--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
 # For user/organization pages set this to an empty string
 # When working locally use jekyll serve --baseurl '' so that you can view everything at localhost:4000
 # See http://jekyllrb.com/docs/github-pages/ for more info
-baseurl: '/innoMAYtion'
+baseurl: '/innomaytion'
 
 # Point the logo URL at a file in your repo or hosted elsewhere by your organization
 logourl: '/assets/img/we-are-wdc.png'
@@ -34,7 +34,7 @@ navigation:
 - text: Introduction
   internal: true
   url: ./
-  
+
 # Repo list
 # List repos that you would like to appear on the homepage here
 repos:
